[package]
name = "savings_calc"
version = "0.1.0"
authors = ["Mateusz Moneta <mateuszmoneta@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
structopt = "0.3.14"
chrono = "0.4.11"
prettytable-rs = "0.8.0"
tokio = { version = "0.2", features = ["macros"] }
simple-error = "0.2.1"
reqwest = {version = "0.10.4", features = ["json"]}
log = "0.4.8"
stderrlog = "0.4.3"
serde = {version = "1.0.105", features = ["derive"]}
